--- a/InternsProject/.gitignore
+++ b/InternsProject/.gitignore
@@ -26,3 +26,54 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore dependencies
+/node_modules
+
+# Ignore build output
+/dist
+
+# Ignore development server files
+/.env.local
+/.env.*.local
+/.env.development.local
+/.env.test.local
+/.env.production.local
+
+# Ignore logs and runtime data
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+*.pid
+*.seed
+*.pid.lock
+
+# Ignore editor-specific files
+.idea
+.vscode
+*.sublime-project
+*.sublime-workspace
+
+# Ignore OS-specific files
+.DS_Store
+Thumbs.db
+
+# Ignore the output of `npm run build`
+/dist
+
+# Ignore the output of `npm run test:unit`
+/coverage
+
+# Ignore lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Ignore generated Vue CLI configuration files
+/vue.config.js
+
+# Ignore files used for debugging
+/*.js.map
+/*.css.map
