--- a/InternsProject/package.json
+++ b/InternsProject/package.json
@@ -10,7 +10,8 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vuetify": "^3.3.10"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.0",
