--- a/InternsProject/package.json
+++ b/InternsProject/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
     "vuetify": "^3.3.10"
   },
   "devDependencies": {
