--- a/InternsProject/package.json
+++ b/InternsProject/package.json
@@ -17,10 +17,11 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.0",
-    "@types/node": "^18.17.0",
+    "@types/node": "^18.17.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/tsconfig": "^0.4.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "npm-run-all": "^4.1.5",
     "typescript": "~5.1.6",
     "vite": "^4.4.6",
