final changes with data from axios ec2

--- a/InternsProject/tsconfig.json
+++ b/InternsProject/tsconfig.json
@@ -1,4 +1,10 @@
 {
+  "compilerOptions": {
+    // Other options...
+    "types": [
+      "node"
+    ]
+  },
   "files": [],
   "references": [
     {
